minor changes and horizontal scroll fix

--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,4 @@
 .cover__title {
-  height: 50%;
   margin: 0;
   padding: 0 16px;
   font-size: 72px;
