--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -22,7 +22,6 @@
 @media screen and (max-width: 1024px) {
   .cover {
     margin: 92px 0 0 0;
-    padding: 0;
     min-height: 640px;
     background-origin: border-box;
   }
